# dashi

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  bindless_triangle.rs  build.rs  report.txt  winit_test.err.txt
.github/workflows/: ci.yml
examples/: bindless_triangle.rs  compute_then_graphics.rs  compute_to_graphics.rs  gpu_timing.rs  hello_bindless.rs  hello_triangle.rs  hello_triangle_cfg.rs  minifb_triangle.rs  openxr_simple_scene.rs  openxr_triangle.rs  transfer_queue_handoff.rs  volume_compute.rs  webgpu_canvas.rs  window_controls.rs
examples/shaders/: hello_triangle_f.glsl  hello_triangle_v.glsl
image_utils/: Cargo.toml
image_utils/src/: lib.rs
orbclient_stub/: Cargo.toml  lib.rs
shaders/glsl/: image.frag.glsl  image.vert.glsl  sprite.frag.glsl  sprite.vert.glsl  text.frag.glsl  text.vert.glsl
src/: gpu_dx12.rs  gpu_metal.rs  lib.rs
src/driver/: command.rs  encoder.rs  ir.rs  mod.rs  state.rs  types.rs
src/framegraph/: mod.rs
src/gfx/: mod.rs
src/gfx/cmd/: mod.rs
src/gpu/: builders.rs  command_ring.rs  commands.rs  context.rs  device_selector.rs  error.rs  framed_cmd_list.rs  minifb_window.rs  mod.rs  openxr_window.rs  renderer.rs  structs.rs  winit_window.rs
src/gpu/cmd/: mod.rs
src/gpu/driver/: command.rs  mod.rs  state.rs  types.rs
src/gpu/execution/: bind_manager.rs  binding_layout_manager.rs  command_dispatch.rs  command_ring.rs  mod.rs  pipeline_manager.rs  renderer.rs
src/gpu/vulkan/: builders.rs  command_pool.rs  commands.rs  conversions.rs  descriptor_sets.rs  device_selector.rs  display.rs  error.rs  examples.rs  framed_cmd_list.rs  image.rs  memory.rs  minifb_window.rs  mod.rs  openxr_window.rs  pipelines.rs  structs.rs  timing.rs  winit_window.rs
src/gpu/webgpu/: builders.rs  commands.rs  display.rs  mod.rs  structs.rs
src/ir/: mod.rs  replay_null.rs  replay_vk.rs  replayer.rs
src/job/: collector.rs  executor.rs  frame_ctx.rs  mod.rs  thread_ctx.rs
src/sync/: barrier_builder.rs  mod.rs  state.rs
src/transient/: mod.rs
src/utils/: gpupool.rs  handle.rs  mod.rs  offset_alloc.rs  per_frame.rs  resource_list.rs  ring_alloc.rs
tests/: README.md  bind_table_flags.rs  command_builder.rs  compute_then_graphics.rs  framebuffer_compare.rs  gpu_timer.rs  ir_roundtrip.rs  minifb_triangle.rs  mipmap_generation.rs  openxr_triangle.rs  pipeline_switch.rs  render_pass_yaml.rs  submit_encoder.rs  submit_with.rs  test.rs  volume_compute.rs  vulkan_api.rs  winit_window_controls.rs
tests/common/: mod.rs
tests/hello_bindless/: bin.rs
tests/hello_compute/: bin.rs
tests/hello_triangle/: bin.rs
