[package]
name = "dashi"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["dashi-sdl2"]
dashi-sdl2 = ["dep:sdl2"]
dashi-minifb = ["dep:minifb"]
dashi-serde = ["dep:serde"]
debug_offset_alloc = []
use_16_bit_node_indices = []

[dependencies]
ash = "0.37.3"
vk-mem = "0.3.0"
sdl2 = {version = "0.35.2", features = ["bundled", "static-link", "raw-window-handle"], optional = true}
ash-window = "0.11"
minifb = { version = "0.24", optional = true }
raw-window-handle = "0.4"
serde = {version = "1.0.210", features = ["derive"], optional = true}

[patch.crates-io]
orbclient = { path = "orbclient_stub" }

[dev-dependencies]
inline-spirv = {version = "0.2.1"}
serial_test = "2.0"

[lib]
