[package]
name = "dashi"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["dashi-winit", "dashi-vulkan"]
dashi-winit = ["dep:winit"]
dashi-sdl2 = ["dep:sdl2"]
dashi-minifb = ["dep:minifb"]
dashi-openxr = ["dep:openxr"]
dashi-serde = ["dep:serde"]
debug_offset_alloc = []
use_16_bit_node_indices = []
dashi-vulkan = ["dep:ash", "dep:vk-mem", "dep:ash-window"]
dashi-dx12 = ["dep:windows"]

[dependencies]
ash = { version = "0.37.3", optional = true }
vk-mem = { version = "0.3.0", optional = true }
sdl2 = {version = "0.37.0", features = ["bundled", "static-link", "raw-window-handle"], optional = true}
ash-window = { version = "0.11", optional = true }
minifb = { version = "0.24", optional = true }
winit = { version = "0.26", optional = true }
openxr = { version = "0.19", optional = true }
raw-window-handle = "0.4"
serde = {version = "1.0.210", features = ["derive"], optional = true}
windows = { version = "0.52.0", optional = true, features = ["Win32_Graphics_Direct3D12"] }

[patch.crates-io]
orbclient = { path = "orbclient_stub" }

[dev-dependencies]
inline-spirv = {version = "0.2.1"}
serial_test = "2.0"
image_utils = { path = "image_utils" }
glam = "0.24"

[lib]
