[package]
name = "dashi"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["dashi-winit", "dashi-serde", "vulkan"]
dashi-winit = ["dep:winit"]
dashi-sdl2 = ["dep:sdl2"]
dashi-minifb = ["dep:minifb"]
dashi-openxr = ["dep:openxr"]
dashi-serde = ["dep:serde", "dep:serde_json", "dep:serde_yaml"]
copy_texture_compat = []
debug_offset_alloc = []
use_16_bit_node_indices = []
vulkan = ["dep:ash", "dep:vk-mem", "dep:ash-window"]

[dependencies]
ash = { version = "0.37", optional = true }
vk-mem = { version = "0.3.0", optional = true }
sdl2 = {version = "0.37.0", features = ["bundled", "static-link", "raw-window-handle"], optional = true}
ash-window = { version = "0.11", optional = true }
minifb = { version = "0.24", optional = true }
winit = { version = "0.26", optional = true }
offset-allocator = { git = "https://github.com/JordanHendl/offsetallocator-rs" }
resource_pool = { git = "https://github.com/JordanHendl/ResourcePool" }
openxr = { version = "0.19", optional = true }
raw-window-handle = "0.4"
serde = {version = "1.0.210", features = ["derive"], optional = true}
serde_json = {version = "1.0.145",  optional = true}
anyhow = "1.0.100"
serde_yaml = {version = "0.9.34", optional = true}
bitflags = "2.6"
bytemuck = { version = "1.16", features = ["derive"] }
smallvec = "1.13"
rayon = { version = "1.10" }

[patch.crates-io]
orbclient = { path = "orbclient_stub" }

[dev-dependencies]
inline-spirv = {version = "0.2.1"}
serial_test = "2.0"
image_utils = { path = "image_utils" }
glam = "0.24"
image = "0.24"

[build-dependencies]
shaderc = "0.8"

[lib]

